# analysis-grand-challenge

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  4j2b_horCR.yaml  LICENSE  README.md  conf.py  index.rst  inputs_test2.json  nanoaod_opendata.json  pixi.toml  pyproject.toml
.github/workflows/: CI.yml
HEPData_cabinetry/: 4j1b_horCR.yaml  submission.yaml  workspace.json
HEP_data_workspace/: data_workspace.yaml
analyses/atlas-open-data-hzz/: CabinetryHZZAnalysis.ipynb  CoffeaHZZAnalysis.ipynb  CoffeaHZZAnalysisWithServiceX.ipynb  CoffeaHZZAnalysisWithServiceX_coffea_casa.ipynb  CoffeaHZZAnalysis_coffea_casa.ipynb  HZZAnalysisInfo.txt  HZZ_analysis_pipeline.ipynb  HZZ_analysis_pipeline.md  HZZ_analysis_pipeline.py  README.md  config.yml  dummy.txt
analyses/cms-open-data-ttbar/: Dockerfile  GetIOBranches.py  MLproject  README  README.md  Snakefile  Snakefile1  analysis.py  cabinetry_config.yml  cabinetry_config_ml.yml  cleaner_snakefile  coffea.ipynb  coffea.py  conda.yaml  config.json  config.yaml  config.yml  corrections.json  dask_demo.py  dask_demo.res  environment-py311.yml  (+47 more)
docs/: atlas-open-data-hzz  cms-open-data-ttbar  conf.py  facilityinstructions.rst  index.rst  requirements.txt  taskbackground.rst  versionsdescription.rst
tests/: README.md  coffea_ServiceX_minimal.ipynb  databinder.ipynb  servicex_queries.ipynb
workshops/agctools2022/statistical-inference/exclusion/: LICENSE  README.rst  setup.cfg
workshops/agctools2022/statistical-inference/exclusion/src/: plotting.py
workshops/agctools2022/statistical-inference/exclusion/src/exclusion/: interpolate.py  visualize.py
(+158 files in other folders)
