[metadata]
name = exclusion
description = Example code for exclusion plots
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/iris-hep/analysis-grand-challenge
author = Matthew Feickert
author_email = matthew.feickert@cern.ch
license = MIT
license_file = LICENSE
keywords = physics interpolation
project_urls =
    Source Code = https://github.com/iris-hep/analysis-grand-challenge/tree/main/workshops/agctools2022/statistical-inference/exclusion
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    scipy>=1.1.0 # requires numpy
    matplotlib>=3.0.0
    Shapely>=1.7.0
    descartes>=1.0.0

[options.packages.find]
where = src

[flake8]
# E203: whitespace before ':'
# E402: module level import not at top of file
# E501: line too long
extend-ignore = E203, E402, E501
max-line-length = 88
count = True
statistics = True
